--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,25 +6,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Cache pnpm modules
-        id: cache-modules
-        uses: actions/cache@v2
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          path: |
-            ~/.pnpm-store
-            **/node_modules
-          key: ${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml', 'rollup.config.js') }}
-          restore-keys: |
-            ${{ runner.os }}-
+          node-version: 22
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2.2.1
+        uses: pnpm/action-setup@v4
         with:
           version: latest
           run_install: false
 
       - name: Install Packages
-        if: steps.cache-modules.outputs.cache-hit != 'true'
         run: pnpm install
 
       - name: Build
