--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -2,14 +2,17 @@ name: HACS Validation
 
 on:
   push:
-    branches:
-      - main
+  pull_request:
+  schedule:
+    - cron: "0 0 * * *"
+  workflow_dispatch:
+
 jobs:
   hacs:
     runs-on: "ubuntu-latest"
     steps:
       - name: Checkout
-        uses: "actions/checkout@v3"
+        uses: "actions/checkout@v4"
       - name: Validate HACS
         uses: "hacs/action@main"
         with:
